--- a/package.json
+++ b/package.json
@@ -1,27 +1,53 @@
 {
-  "name": "oex-web3",
+  "name": "oex-web3-ts",
   "version": "1.2.1",
   "description": "Oexchain Web3 JS API",
-  "main": "index.js",
+  "main": "build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf coverage build tmp",
+    "build": "tsc -p tsconfig.release.json",
+    "build:watch": "tsc -w -p tsconfig.release.json",
+    "lint": "eslint . --ext .ts,.tsx",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch"
+  },
+  "engines": {
+    "node": ">= 12.13 <13"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/OEXPlatform/oexweb3j.git"
+    "url": "git+https://github.com/ftfan/oexweb3.js.git"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/OEXPlatform/oexweb3j/issues"
+    "url": "https://github.com/ftfan/oexweb3.js/issues"
   },
-  "homepage": "https://github.com/OEXPlatform/oexweb3j#readme",
+  "homepage": "https://github.com/ftfan/oexweb3.js#readme",
   "dependencies": {
+    "bignumber.js": "^8.0.2",
     "eth-crypto": "^1.3.3",
     "ethereumjs-abi": "^0.6.7",
     "ethereumjs-util": "^6.1.0",
+    "node-fetch": "^2.6.1",
     "rlp": "^2.2.3",
-    "bignumber.js": "^8.0.2"
+    "tslib": "~2.0.1"
+  },
+  "devDependencies": {
+    "@types/ethereumjs-abi": "^0.6.3",
+    "@types/jest": "~26.0.10",
+    "@types/node": "~12.12",
+    "@typescript-eslint/eslint-plugin": "~3.9.1",
+    "@typescript-eslint/parser": "~3.9.1",
+    "eslint": "~7.7.0",
+    "eslint-config-prettier": "~6.11.0",
+    "eslint-plugin-jest": "~23.20.0",
+    "jest": "~26.4.2",
+    "prettier": "~2.0.5",
+    "rimraf": "~3.0.2",
+    "ts-jest": "~26.2.0",
+    "tsutils": "~3.17.0",
+    "typescript": "~4.0.2"
   }
 }
