--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oex-web3-ts",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Oexchain Web3 JS API",
   "main": "build/src/index.js",
   "scripts": {
@@ -26,11 +26,11 @@
   },
   "homepage": "https://github.com/ftfan/oexweb3.js#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "bignumber.js": "^8.0.2",
     "eth-crypto": "^1.3.3",
     "ethereumjs-abi": "^0.6.7",
     "ethereumjs-util": "^6.1.0",
-    "node-fetch": "^2.6.1",
     "rlp": "^2.2.3",
     "tslib": "~2.0.1"
   },
